--- a/capt-marvel.html
+++ b/capt-marvel.html
@@ -73,7 +73,7 @@
                 mollitia.</p>
         </div>
 
-        <img id="capt-mar" src="/images/cap-marvel.png" alt="Captain Marvel">
+        <img id="capt-mar" src="./images/cap-marvel.png" alt="Captain Marvel">
     </div>
 </body>
 
